--- a/app/views/translater/select.html.slim
+++ b/app/views/translater/select.html.slim
@@ -3,7 +3,7 @@ h1 Válassz fordítandó projectet
 .container.bg-secondary
     - @project.each do |p|
         .row
-            .col-md-6.col-xl-4
+            .col-md-6.col-xl-4.p-1
                 .card
                     .card-body.bg-dark
                         |Title: 
