--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -15,12 +15,17 @@ hr
     |)
 br
 h2 File szűrő
-br
-= select 'file_id','',@translate_cucc.collect{ |u| [u.file, u.file] }, {prompt: 'Válassz fájlt'}
+.row
+    .col-2
+        -t = URI.parse(request.url)
+        -params2 = CGI.parse(t.query)
+        -file2     = params2['file'].first
+        -col2     = params2['col'].first
+        = select 'file_id','', @translate_cucc.collect{ |u| [u.file, u.file] }, {prompt: 'Válassz fájlt', selected: file2}, class: "form-control"
+    .col-2
+        - if params[:file].present?
+            = select 'oszlop_id','',@header.collect{ |u| [u.original, u.col_num] }, {prompt: 'Válassz oszlopot', selected: col2} , class: "form-control"       
 
-- if params[:file].present?
-    = select 'oszlop_id','',@header.collect{ |u| [u.original, u.col_num] }, {prompt: 'Válassz oszlopot'}        
-br        
 = link_to 'Töröld', torol_path, class: "btn btn-primary text-light", method: :post
 br
 | Össz adatábzis rekord:  #{@translate_all}
@@ -32,85 +37,149 @@ br
    = will_paginate @translater, :container => false  
 table class="table table-striped table-dark"
     tr 
+        th Original_Text
         
-        th style="width:100px" Original_ID
-        th style="width:700px" Original_Text
-        th style="width:700px" Translate_Text
-        th style="width:700px" Duplicated
-
     -@translater.each do |trans|
         tr id="tr_#{trans.id}"
               
-            td 
-                .col.mx-3
-                    .row.text-light.bg-info
-                        |NFO BOX
-                    .row 
-                        |Dbase id: #{trans.id}
-                    .row 
-                        |Row: #{trans.row_num}
-                    .row 
-                        |Col: #{trans.col_num}
-                    .row 
-                        |File name:#{trans.file}
-                    .row 
-                        |Fejléc:#{trans.header}
+            
+           
                 
             td 
-                .input-group.mb-3
-                    .input-group-prepend
-                        button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
-                            i class="fas fa-ban" aria-hidden="true"
-                        span class="input-group-text basic-addon1 #{ status(trans.status) } text-light" id="#{trans.id}" style="width:100px" 
-                            |Angol:
-                            br 
-                            |Státusz: #{trans.status}
-                        
-                    textarea rows="2" class="form-control" id="old_#{trans.id}" disabled=""
-                        = trans.original
-                    button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
-                        i class="far fa-copy" aria-hidden="true"
-                    button id="only" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
-                        i class="fas fa-font" aria-hidden="true"
-                
-                - if !trans_controll(trans.trans_id).present?
-                    -if trans.header != true
-                        .input-group
+                .row
+                    .col-1
+                         .col.mx-3
+                            .row.text-light.bg-info
+                                |NFO BOX
+                            .row 
+                                |Dbase id: #{trans.id}
+                            .row 
+                                |Row: #{trans.row_num}
+                            .row 
+                                |Col: #{trans.col_num}
+                            .row 
+                                |File name:#{trans.file}
+                            .row 
+                                |Fejléc:#{trans.header}
+                    .col
+                        .row
+                        .input-group.mb-3
                             .input-group-prepend
-                                span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
-                            .row
-                                .col-12
-                                    textarea rows="2" cols="60" class="form-control" id="new_#{trans.id}"
-                                    button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
-                                        |  Mentés 
+                                button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
+                                    i class="fas fa-ban" aria-hidden="true"
+                                span class="input-group-text basic-addon1 #{ status(trans.status) } text-light" id="#{trans.id}" style="width:100px" 
+                                    |Eredeti:
+                                    br 
+                                    |Státusz: #{trans.status}
+                                
+                            textarea rows="1" class="form-control" id="old_#{trans.id}" disabled=""
+                                = trans.original
+                            button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
+                                i class="far fa-copy" aria-hidden="true"
+
+                        .row 
+                        - if !trans_controll(trans.trans_id).present?
+                            -if trans.header != true
+                            .input-group.mb-3
+                                .input-group-prepend
+                                    button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
+                                        i class="fas fa-ban" aria-hidden="true"
+                                span class="input-group-text basic-addon1 bg-secondary text-light pr-3" style="width:100px" Fordításod:
+                                textarea rows="1" class="form-control" id="new_#{trans.id}"
+                                button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
+                                    i class="far fa-copy" aria-hidden="true"
+                                button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                    i class="far fa-save"
                                     
-                    -else
-                        .bg-success
-                            | Fejléc, nem editálható!
+                        -else
+                            .bg-success
+                               | Fejléc, nem editálható!
+                        
+                   
+                hr style="border: 5px solid green;border-radius: 5px;"
+  
+
+                .row.bg-secondary
+                    .col-1
+                        h2 Fordítás:
+                    .col
+                        - t= reader(trans.id)
+                        -if t.present?
+                            
+                            -t.each do |b|
+                                .input-group.mb-3
+                                    .input-group-prepend
+                                        button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem jó fordítás" name="#{b.id}"
+                                            i class="fas fa-ban" aria-hidden="true"
+                                        span class="input-group-text basic-addon1 #{ status(b.status) } text-light" id="#{b.id}" style="width:100px" 
+                                            =User.find(b.users_id).username.capitalize  
+                                            br Státusz: #{b.status}
+                                            
+                                    textarea rows="2" class="form-control" id="trans_#{b.id}"
+                                        = b.translate
+                                    button id="copy_translate" class="btn btn-outline-light" data-adat = "#{b.trans_id}" data-toggle="tooltip" data-placement="top"  name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
+                                        i class="far fa-copy" aria-hidden="true"
+                                                    
+                                    -if b.status = 0
+                                        button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.id}"  title="Elfogadás" 
+                                            i class="fas fa-spell-check" aria-hidden="true"
+                                        
+                .row.border
+                    .col-12
+                        hr style="border: 10px solid #212529;border-radius: 5px;"
+                    .col-12
+                        - d = dupe_controll(trans.original, trans.id, trans.col_num)
+                        -if d.present?
+                            h3.bg-dark.text-light Dupla:
+                        - d.each do |dupe|
+                            .row
+                                .col-1.ml-5
+                                    .row.text-light.bg-info
+                                        |NFO BOX
+                                    .row 
+                                        |Dbase id: #{dupe.id}
+                                    .row 
+                                        |Row: #{dupe.row_num}
+                                    .row 
+                                        |Col: #{dupe.col_num}
+                                    .row 
+                                        |File name:#{dupe.file}
+                                    .row 
+                                        |Fejléc:#{dupe.header}
+                                .col
+                                    .input-group.mb-3
+                                        .input-group-prepend
+                                            button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{dupe.id}"
+                                                i class="fas fa-ban" aria-hidden="true"
+                                            span class="input-group-text basic-addon1 #{ status(dupe.status) } text-light" id="#{dupe.id}" style="width:100px" 
+                                                br Státusz: #{dupe.status}
+                                                
+                                        textarea rows="2" class="form-control" id="trans_#{dupe.id}"
+                                            = dupe.original
+                            .row 
+                                - if !trans_controll(trans.trans_id).present?
+                                .col-1
+                                
+                                .col
+                                    -if trans.header != true
+                                        .input-group
+                                            .input-group-prepend
+                                                span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
+                                            textarea rows="2" cols="60" class="form-control" id="new_#{dupe.id}"
+                                                button id="SAVE_#{dupe.id}" class=" mr-2 btn btn-outline-success" name="#{dupe.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                                    i class="far fa-save"
+                                                    
+                                    -else
+                                        .bg-success
+                                            | Fejléc, nem editálható!
                
             td
                 
-                    - t= reader(trans.id)
-                    -if t.present?
-                        
-                        -t.each do |b|
-                            .input-group.mb-3
-                                .input-group-prepend
-                                    button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{b.id}"
-                                        i class="fas fa-ban" aria-hidden="true"
-                                    span class="input-group-text basic-addon1 #{ status(b.status) } text-light" id="#{b.id}" style="width:100px" 
-                                        =User.find(b.users_id).username.capitalize  
-                                        br Státusz: #{b.status}
-                                        
-                                textarea rows="2" class="form-control" id="trans_#{b.id}"
-                                    = b.translate
-                                button id="copy_translate" class="btn btn-outline-light" data-adat = "#{b.trans_id}" data-toggle="tooltip" data-placement="top"  name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
-                                    i class="far fa-copy" aria-hidden="true"
-                                                   
-                                -if b.status = 0
-                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.id}"  title="Elfogadás" 
-                                        i class="fas fa-spell-check" aria-hidden="true"
-                                    
-            td
+                    
+            
+                                
+                                                    
+                               
+                    
 .digg_pagination
     = will_paginate @translater, :container => false
