--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -80,26 +80,25 @@ table class="table table-striped table-dark"
                         .row 
                         - if !trans_controll(trans.trans_id).present?
                             -if trans.header != true
-                            .input-group.mb-3
-                                .input-group-prepend
-                                    button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
-                                        i class="fas fa-ban" aria-hidden="true"
-                                span class="input-group-text basic-addon1 bg-secondary text-light pr-3" style="width:100px" Fordításod:
-                                textarea rows="1" class="form-control" id="new_#{trans.id}"
-                                button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
-                                    i class="far fa-copy" aria-hidden="true"
-                                button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
-                                    i class="far fa-save"
+                                .input-group.mb-3
+                                    .input-group-prepend
+                                        
+                                    span class="input-group-text basic-addon1 bg-secondary text-light pr-3" style="width:100px" Fordításod:
+                                    textarea rows="1" class="form-control" id="new_#{trans.id}"
+                                    button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
+                                        i class="far fa-copy" aria-hidden="true"
+                                    button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                        i class="far fa-save"
                                     
-                        -else
-                            .bg-success
-                               | Fejléc, nem editálható!
+                            -else
+                                .bg-success
+                                    | Fejléc, nem editálható!
                         
                    
                 hr style="border: 5px solid green;border-radius: 5px;"
   
 
-                .row.bg-secondary
+                .row.bg-dark
                     .col-1
                         h2 Fordítás:
                     .col
@@ -107,7 +106,7 @@ table class="table table-striped table-dark"
                         -if t.present?
                             
                             -t.each do |b|
-                                .input-group.mb-3
+                                .input-group.m-3
                                     .input-group-prepend
                                         button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem jó fordítás" name="#{b.id}"
                                             i class="fas fa-ban" aria-hidden="true"
@@ -115,7 +114,7 @@ table class="table table-striped table-dark"
                                             =User.find(b.users_id).username.capitalize  
                                             br Státusz: #{b.status}
                                             
-                                    textarea rows="2" class="form-control" id="trans_#{b.id}"
+                                    textarea rows="2" class="form-control" id="trans_#{b.id}" disabled=""
                                         = b.translate
                                     button id="copy_translate" class="btn btn-outline-light" data-adat = "#{b.trans_id}" data-toggle="tooltip" data-placement="top"  name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
                                         i class="far fa-copy" aria-hidden="true"
@@ -126,26 +125,28 @@ table class="table table-striped table-dark"
                                         
                 .row.border
                     .col-12
-                        hr style="border: 10px solid #212529;border-radius: 5px;"
+                        
                     .col-12
                         - d = dupe_controll(trans.original, trans.id, trans.col_num)
                         -if d.present?
-                            h3.bg-dark.text-light Dupla:
+                            hr style="border: 10px solid #212529;border-radius: 5px;"
+                            h6.bg-dark.text-light Dupla:
                         - d.each do |dupe|
                             .row
-                                .col-1.ml-5
-                                    .row.text-light.bg-info
-                                        |NFO BOX
-                                    .row 
-                                        |Dbase id: #{dupe.id}
-                                    .row 
-                                        |Row: #{dupe.row_num}
-                                    .row 
-                                        |Col: #{dupe.col_num}
-                                    .row 
-                                        |File name:#{dupe.file}
-                                    .row 
-                                        |Fejléc:#{dupe.header}
+                                .col-1
+                                    .col.ml-5
+                                        .row.text-light.bg-info
+                                            |NFO BOX
+                                        .row 
+                                            |Dbase id: #{dupe.id}
+                                        .row 
+                                            |Row: #{dupe.row_num}
+                                        .row 
+                                            |Col: #{dupe.col_num}
+                                        .row 
+                                            |File name:#{dupe.file}
+                                        .row 
+                                            |Fejléc:#{dupe.header}
                                 .col
                                     .input-group.mb-3
                                         .input-group-prepend
@@ -154,24 +155,49 @@ table class="table table-striped table-dark"
                                             span class="input-group-text basic-addon1 #{ status(dupe.status) } text-light" id="#{dupe.id}" style="width:100px" 
                                                 br Státusz: #{dupe.status}
                                                 
-                                        textarea rows="2" class="form-control" id="trans_#{dupe.id}"
+                                        textarea rows="2" class="form-control" id="trans_#{dupe.id}" disabled=""
                                             = dupe.original
                             .row 
                                 - if !trans_controll(trans.trans_id).present?
-                                .col-1
+                                .col-1.ml
                                 
                                 .col
                                     -if trans.header != true
-                                        .input-group
+                                        .input-group.mb-3
                                             .input-group-prepend
-                                                span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
-                                            textarea rows="2" cols="60" class="form-control" id="new_#{dupe.id}"
-                                                button id="SAVE_#{dupe.id}" class=" mr-2 btn btn-outline-success" name="#{dupe.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
-                                                    i class="far fa-save"
+                                                span class="input-group-text basic-addon1 bg-secondary text-light"  Fordításod:
+                                            
+                                            textarea rows="1" class="form-control" id="new_#{dupe.id}"
+                                            button id="SAVE_#{dupe.id}" class=" mr-2 btn btn-outline-success" name="#{dupe.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                                i class="far fa-save"
                                                     
                                     -else
                                         .bg-success
                                             | Fejléc, nem editálható!
+                            .row.bg-secondary
+                                .col-1
+                                    h2 Fordítás:
+                                .col
+                                    - t= reader(dupe.id)
+                                    -if t.present?
+                                        
+                                        -t.each do |b|
+                                            .input-group.m-3
+                                                .input-group-prepend
+                                                    button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem jó fordítás" name="#{b.id}"
+                                                        i class="fas fa-ban" aria-hidden="true"
+                                                    span class="input-group-text basic-addon1 #{ status(b.status) } text-light" id="#{b.id}" style="width:100px" 
+                                                        =User.find(b.users_id).username.capitalize  
+                                                        br Státusz: #{b.status}
+                                                        
+                                                textarea rows="2" class="form-control" id="trans_#{b.id}" disabled=""
+                                                    = b.translate
+                                                button id="copy_translate" class="btn btn-outline-light" data-adat = "#{b.trans_id}" data-toggle="tooltip" data-placement="top"  name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
+                                                    i class="far fa-copy" aria-hidden="true"
+                                                                
+                                                -if b.status = 0
+                                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.id}"  title="Elfogadás" 
+                                                        i class="fas fa-spell-check" aria-hidden="true"
                
             td
                 
