--- a/app/views/uploads/_form.html.slim
+++ b/app/views/uploads/_form.html.slim
@@ -8,7 +8,7 @@
 
   .field
     = f.label :uploads
-    = f.file_field :uploads, multiple: true, required: true, accept: "text/plain"
+    = f.file_field :uploads, multiple: true, required: true
   .field
     = f.label :name
     = f.text_field :name
