--- a/app/views/images/edit.html.slim
+++ b/app/views/images/edit.html.slim
@@ -1,4 +1,4 @@
--if current_user.id == @image.user_id
+-if current_user.id == @image.user_id || current_user.admin?
     = render 'form'
 -else
     |Ehez nincs jogod.
