--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -109,7 +109,7 @@ table.table.table-dark
                     
                 - if current_user.admin? 
                     =link_to "ELKÉSZÜLT", donetwo_path(id: image.id, done: "true"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-block btn-success"
-                -if current_user.id = image.user_id || current_user.admin? 
+                -if current_user.id == image.user_id || current_user.admin? 
                     = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"    
                 - if current_user.admin? 
                     = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
