Kijelzi a user / kép arányt 1.2

--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -25,4 +25,4 @@
                     div id="formFooter"
                         h5 Powered by Sediqwe
 -else
-    | Ehez nincs jogosultságod
+    | Ehhez nincs jogosultságod
