--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -52,9 +52,9 @@ table.table.table-dark
                
                     -image.photos.each do |im|
                         a.color-gray-darker.td-hover-none data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#"
-                        .ba-0.tp-s    
-                            = image_tag im.variant(resize_to_limit: [300, 300]).processed, class: "" if im.present?
-                            =im.created_at
+                            .ba-0.tp-s    
+                                = image_tag im.variant(resize_to_limit: [300, 300]).processed, class: "" if im.present?
+                                =im.created_at
                         .bg-dark
                         |Uplader: 
                         - if image.user_id
@@ -187,6 +187,12 @@ table.table.table-dark
             .modal-content
                 .modal-body.mb-0.p-0
                     = image_tag image.image, class: "card-img-top" if image.image.present?
+                        -image.photos.each do |im|
+                            =im.inspect
+                            a.color-gray-darker.td-hover-none data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#"
+                                .ba-0.tp-s    
+                                = image_tag im.variant(resize_to_limit: [300, 300]).processed, class: "" if im.present?
+                                =im.created_at
 
                 .modal-footer
                     div
