--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -1,6 +1,6 @@
 div
     - if current_user.present? 
-        h2.text-dark Új kép feltöltés:
+        h2.text-light Új kép feltöltés:
         br
         = link_to new_image_path(), class: "btn btn-success text-light" do 
             i class="fas fa-cloud-upload-alt"  Feltöltés
@@ -102,6 +102,13 @@ table.table.table-dark
                 td 
                     - if current_user.admin? 
                         = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
+                    -if image.done? &&  current_user.admin? 
+                        
+                        =link_to "NINCS KÉSZ", donetwo_path(id: image.id, done: "false"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"false", remote: true, method: :post, class: "btn btn-block btn-danger"
+                        
+                    -else                
+                        - if current_user.admin? 
+                            =link_to "ELKÉSZÜLT", donetwo_path(id: image.id, done: "true"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-block btn-success"
                     = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
                   
             -else
