--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -100,8 +100,7 @@ table.table.table-dark
                                             = link_to "Edit", edit_comment_path(com), class: "btn btn-primary text-light "
                                             = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary text-light "
                 td 
-                    - if current_user.admin? 
-                        = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
+                    
                     -if image.done? &&  current_user.admin? 
                         
                         =link_to "NINCS KÉSZ", donetwo_path(id: image.id, done: "false"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"false", remote: true, method: :post, class: "btn btn-block btn-danger"
@@ -109,8 +108,12 @@ table.table.table-dark
                     -else                
                         - if current_user.admin? 
                             =link_to "ELKÉSZÜLT", donetwo_path(id: image.id, done: "true"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-block btn-success"
+                    - if current_user.admin? 
+                        = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"    
+                    -if current_user.id == image.user_id || current_user.admin? 
+                        = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"    
                     = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
-                  
+                    
             -else
                 td class="bg-dark"
                     a.color-gray-darker.td-hover-none data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#"
